--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,8 @@ jobs:
 #       - name: Build Android Dev APK
 #         run: ionic capacitor build android
 
-#       - name: Build Android Release APK
-#         run: ionic capacitor build android --release --prod
+      - name: Build Android Release APK
+        run: ionic capacitor build android --release --prod
 
       - name: Generate the Android App Bundle
         working-directory: ./android/
