--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v1.4.3
         with:
           java-version: 1.8
 
@@ -53,11 +53,11 @@ jobs:
 #           name: app-dev
 #           path: apk/app-debug.apk
 
-#       - name: Upload release bundle
-#         uses: actions/upload-artifact@v1
-#         with:
-#           name: app-release
-#           path: apk/app.aab
+      - name: Upload release bundle
+        uses: actions/upload-artifact@v1
+        with:
+          name: app-release
+          path: apk/app.aab
           
       - run: |
           cd android/app/build/outputs
