--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
         run: cd android && gradle bundle
         
       - name: Build apk bundle
-        run: cd android && gradle assemle
+        run: cd android && gradle assemble
 
       - name: Upload dev APK
         uses: actions/upload-artifact@v1
