--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
           path: ${{steps.sign_apk.outputs.signedReleaseFile}}
           
       - name: Build AAB
-        run: bash ./gradlew bundleRelease
+        run: gradle bundleRelease
         
       - name: Sign AAB
         id: sign_aab
