--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,21 +21,17 @@ jobs:
       - run: npm i -g @ionic/cli
       - run: npm i
       - run: npx cap copy
-#       - run: npx cap copy ios
       - run: ionic capacitor build ios --no-open
       
       - run: |
           cd ios/App
           xcodebuild clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -scheme App -workspace App.xcworkspace
-            
-          echo 1
-          ls
           
-          echo 2
-          cd App && ls
-          
-          echo 3
-          cd ../../ && ls
+      - name: Upload IOS
+        uses: actions/upload-artifact@v1
+        with:
+          name: "IOS Folder"
+          path: ios
           
 #       - name: Start SSH via ngrok
 #         uses: P3TERX/ssh2actions@main
