--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,10 @@ jobs:
       
       - run: |
           cd ios/App
-          xcodebuild clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -scheme App -workspace App.xcworkspace
-          
+
+          xcodebuild clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -scheme App -project App.xcodeproj -workspace App.xcworkspace -archivePath App.xcarchive archive
+          xcodebuild -exportArchive -archivePath App.xcarchive -exportPath App.ipa -exportOptionsPlist ./ExportOptions.plist
+
       - name: Upload IOS
         uses: actions/upload-artifact@v1
         with:
