--- a/ios/App/ExportOptions.plist
+++ b/ios/App/ExportOptions.plist
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist SYSTEM "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-  <key>method</key>
-  <string>app-store</string>
+	<key>Root</key>
+	<dict>
+		<key>distribution</key>
+		<string>export</string>
+		<key>method</key>
+		<string>development</string>
+		<key>provisioningProfiles</key>
+		<dict>
+			<key>io.ionic.starter</key>
+			<string>hello</string>
+		</dict>
+	</dict>
 </dict>
 </plist>
