--- a/ios/App/ExportOptions.plist
+++ b/ios/App/ExportOptions.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>Root</key>
 	<dict>
+        <key>teamID</key>
+        <string>kaju's team</string>
 		<key>distribution</key>
 		<string>export</string>
 		<key>method</key>
